# aifx

./: .flake8  .gitignore  .swp  CHANGELOG.md  CNAME  README.md  VirtualBoxVM.dxvk-cache  _config.yml  foo  index.md  pyproject.toml  scratch.txt
.github/workflows/: publish-to-pypi.yml
OLD_aifx/: index.md
aifx/: .gitignore  __init__.py  aifx.files  aifx.py  aifx.pyproject  form.ui  index.md  ui_form.py
aifx/client/: aifx.py  (+4 more)
devops/: index.md
pages/: aifx.md  testing.md
scripts/: devsync.sh  new_release.sh  new_release_functions.sh  run_final_tests.sh  test_functions.sh
tests/: conftest.py  index.md
tutorial/: 00-template.md  00.1-introduction.md  00.2-preview.md  01-introduction.md  01-oanda-account-setup.md  02-preview.md  02-rest-api.md  03-oanda-account-setup.md  03-oanda-api.md  04-rest-api.md  04-vs-code-and-python.md  05-candle-data-from-python.md  05-oanda-api.md  06-VS-Code-and-Python.md  06-instruments.md  06-vs-code-and-python.md  07-candle-data-from-python.md  07-historical-candle-data.md  08-collecting-data-for-multiple-pairs.md  08-instruments.md  09-create-utils-script.md  09-historical-candle-data.md  10-classes.md  10-collecting-data-for-multiple-pairs.md  11-create-utils-script.md  11-instrument-class.md  12-classes.md  12-oanda-api.md  13-df-conversion.md  13-instrument-class.md  14-.md  14-plotly.md  15-styling-plotly.md  16-plot_moving-avg.md  17-multiple-avgs.md  index.md
tutorial-code/: EUR_USD_H1.pkl  candle_plot.ipynb  defs.py  instrument.ipynb  instrument.py  instruments.pkl  oanda_api.py  save_candles.ipynb  test.ipynb  utils.py
(+106 files in other folders)
