[tool.poetry]
name = "aifx"
version = "0.15.6"
license = "GPL-3.0-or-later"
description = "AI-driven FOREX experimentation framework."
authors = ["Nadim-Daniel Ghaznavi <nghaznavi@gmail.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/aifx/"
repository = "https://github.com/NadimGhaznavi/aifx"
keywords = ["AI", "FOREX", "textual"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Environment :: Console",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
requests = ">=2.33.1"
pandas = ">=3.0.2"
plotly = ">=6.7.0"
PySide6 = ">=6.11.0"
poetry = ">=2.3.4"
poetry-core = ">=2.3.2"


# Core runtime dependencies
rich = "^14.0.0"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.0.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
textual = {extras = ["syntax"], version = "^8.2.0"}
textual-dev = "^1.7.0"
textual-plot = "^0.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[tool.poetry.scripts]
aifx = "aifx.client.aifx:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
